# kizuna

./: .gitignore  Cargo.toml  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  tailwind.config.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  placeholder.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  config.rs  mod.rs  session.rs  window.rs
src-tauri/src/infrastructure/: event_bus.rs  mod.rs  state.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/chat/: mod.rs
src-tauri/src/modules/chat/application/: mod.rs
src-tauri/src/modules/chat/domain/: events.rs  mod.rs
src-tauri/src/modules/chat/infrastructure/: mod.rs
src-tauri/src/modules/chat/ports/: llm_port.rs  message_repository.rs  mod.rs  session_repository.rs
src-tauri/src/modules/config/: mod.rs
src-tauri/src/modules/config/application/: commands.rs  mod.rs  queries.rs  service.rs
src-tauri/src/modules/config/domain/: entities.rs  events.rs  mod.rs  value_objects.rs
src-tauri/src/modules/config/infrastructure/: memory_repository.rs  mod.rs  store_repository.rs
src-tauri/src/modules/config/ports/: config_port.rs  config_repository.rs  mod.rs
src-tauri/src/modules/tray/: mod.rs
src-tauri/src/modules/tray/domain/: entities.rs  events.rs  mod.rs
src-tauri/src/modules/tray/infrastructure/: mod.rs  tauri_handler.rs
src-tauri/src/modules/tray/ports/: mod.rs  tray_port.rs
src-tauri/src/modules/window/: mod.rs
src-tauri/src/modules/window/domain/: entities.rs  events.rs  mod.rs  value_objects.rs
src-tauri/src/modules/window/infrastructure/: mod.rs  tauri_adapter.rs
src-tauri/src/modules/window/ports/: mod.rs  window_port.rs
src-tauri/src/shared/: errors.rs  lip_sync.rs  mod.rs  types.rs
(+102 files in other folders)
